[gd_scene load_steps=29 format=3 uid="uid://wgn84s3k3cve"]

[ext_resource type="Script" uid="uid://cmrajyq8ajfht" path="res://game_objects/enemy/tornado/lasso_tornado.gd" id="1_fgfdm"]
[ext_resource type="AudioStream" uid="uid://ccpd20v12fiwu" path="res://Audio/sfx/tornado/footstep_snow_004.ogg" id="2_n64tn"]
[ext_resource type="Shader" uid="uid://cpdy4o1gkp8j5" path="res://game_objects/enemy/tornado/tornado.gdshader" id="2_pm43l"]
[ext_resource type="AudioStream" uid="uid://c63qt2for3etl" path="res://Audio/sfx/tornado/footstep_snow_003.ogg" id="3_ug65v"]
[ext_resource type="Texture2D" uid="uid://b3s0onjqtcd08" path="res://game_objects/enemy/tornado/tornado.png" id="3_wvlgh"]
[ext_resource type="AudioStream" uid="uid://c3jjnnxlol16j" path="res://Audio/sfx/tornado/platesHit5.ogg" id="4_8nw8d"]
[ext_resource type="Script" uid="uid://c4dfgek08w5mx" path="res://game_objects/enemy/tornado/area_2d.gd" id="4_fbqvm"]
[ext_resource type="Script" uid="uid://crrs6vyewl7u6" path="res://game_objects/components/hitbox/hitbox_component.gd" id="5_gyh5j"]
[ext_resource type="AudioStream" uid="uid://do7whrfsbw0l8" path="res://Audio/sfx/tornado/rockHit2.ogg" id="5_ndiol"]
[ext_resource type="AudioStream" uid="uid://dv47wbqgjswnb" path="res://Audio/sfx/tornado/platesHit3.ogg" id="6_bk3bp"]
[ext_resource type="AudioStream" uid="uid://c2ksyywbp532k" path="res://Audio/sfx/tornado/wind1.ogg" id="7_evb1k"]
[ext_resource type="AudioStream" uid="uid://cpb636hebswu0" path="res://Audio/sfx/tornado/wind2.ogg" id="8_f5dc1"]
[ext_resource type="AudioStream" uid="uid://11a447u7v3e4" path="res://Audio/sfx/tornado/wind3.ogg" id="9_uj7pw"]
[ext_resource type="Texture2D" uid="uid://f5ljwyatnjrn" path="res://assets/particles.png" id="15_8nw8d"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_djul1"]
random_pitch = 1.1
random_volume_offset_db = 3.0
streams_count = 8
stream_0/stream = ExtResource("2_n64tn")
stream_1/stream = ExtResource("3_ug65v")
stream_2/stream = ExtResource("4_8nw8d")
stream_3/stream = ExtResource("5_ndiol")
stream_4/stream = ExtResource("6_bk3bp")
stream_5/stream = ExtResource("7_evb1k")
stream_5/weight = 5.0
stream_6/stream = ExtResource("8_f5dc1")
stream_6/weight = 5.0
stream_7/stream = ExtResource("9_uj7pw")
stream_7/weight = 6.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6ui44"]
shader = ExtResource("2_pm43l")
shader_parameter/tile_scale = Vector2(2, 5)
shader_parameter/pan_speed = Vector2(5, 2)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_fbqvm"]
radius = 1.0
height = 12.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fgfdm"]
size = Vector2(100, 130)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pm43l"]
size = Vector2(60, 300)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_ndiol"]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id="Gradient_bk3bp"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.238636, 0.632576, 0.931818)
colors = PackedColorArray(0.392157, 0.388235, 0.396078, 1, 0.501961, 0.286275, 0.227451, 1, 0.827451, 0.627451, 0.407843, 1, 0.898039, 0.807843, 0.705882, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_evb1k"]
gradient = SubResource("Gradient_bk3bp")

[sub_resource type="Gradient" id="Gradient_f5dc1"]
offsets = PackedFloat32Array(0, 0.405303)
colors = PackedColorArray(0.5247, 0.5194, 0.53, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_uj7pw"]
gradient = SubResource("Gradient_f5dc1")

[sub_resource type="Curve" id="Curve_djul1"]
_data = [Vector2(0, 0.0465443), 0.0, 0.0, 0, 0, Vector2(0.0655172, 0.935825), 0.797603, 0.797603, 0, 0, Vector2(0.296552, 0.899154), -0.322264, -0.322264, 0, 0, Vector2(0.582759, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -5.99906, 0.0, 0, 0]
point_count = 5

[sub_resource type="CurveTexture" id="CurveTexture_xiuxc"]
curve = SubResource("Curve_djul1")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_rugp5"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 100.0
angle_min = -360.0
angle_max = 360.0
direction = Vector3(0, -1, 0)
spread = 30.0
initial_velocity_min = 50.0
initial_velocity_max = 100.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
gravity = Vector3(-30, -10, 0)
scale_min = 3.0
scale_max = 6.0
scale_curve = SubResource("CurveTexture_xiuxc")
color_ramp = SubResource("GradientTexture1D_uj7pw")
color_initial_ramp = SubResource("GradientTexture1D_evb1k")
anim_offset_max = 1.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_tdxhq"]
lifetime_randomness = 0.2
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(50, -30, 1)
angle_min = -360.0
angle_max = 360.0
direction = Vector3(1, -1, 0)
spread = 30.0
initial_velocity_min = 100.0
initial_velocity_max = 200.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
gravity = Vector3(-400, -50, 0)
scale_min = 2.0
scale_max = 4.0
scale_curve = SubResource("CurveTexture_xiuxc")
color_ramp = SubResource("GradientTexture1D_uj7pw")
color_initial_ramp = SubResource("GradientTexture1D_evb1k")
anim_offset_max = 1.0

[node name="Tornado" type="Node2D"]
script = ExtResource("1_fgfdm")

[node name="AudioTimer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="Audio" type="Node2D" parent="."]

[node name="AudioPlayer" type="AudioStreamPlayer2D" parent="Audio"]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_djul1")
volume_db = 5.0
attenuation = 3.0
max_polyphony = 15

[node name="Visuals" type="Node2D" parent="."]

[node name="MeshInstance2D" type="MeshInstance2D" parent="Visuals"]
material = SubResource("ShaderMaterial_6ui44")
position = Vector2(0, -250)
scale = Vector2(-38.692, -49.9343)
mesh = SubResource("CapsuleMesh_fbqvm")
texture = ExtResource("3_wvlgh")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32
script = ExtResource("4_fbqvm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -60)
shape = SubResource("RectangleShape2D_fgfdm")

[node name="HitboxComponent" type="Area2D" parent="." node_paths=PackedStringArray("_collision_shape")]
script = ExtResource("5_gyh5j")
damage = 10
_collision_shape = NodePath("CollisionShape2D")
metadata/_custom_type_script = "uid://crrs6vyewl7u6"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(0, -150)
shape = SubResource("RectangleShape2D_pm43l")

[node name="bottomdust" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_ndiol")
amount = 30
texture = ExtResource("15_8nw8d")
process_material = SubResource("ParticleProcessMaterial_rugp5")

[node name="traildust" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_ndiol")
position = Vector2(50, 0)
amount = 29
texture = ExtResource("15_8nw8d")
lifetime = 1.5
process_material = SubResource("ParticleProcessMaterial_tdxhq")
